@@ -4,6 +4,7 @@
   - Added watches on /varlog/faillock and /var/log/tallylock
   - Added watches on /usr/sbin/insmod and /bin/kmod
   - Added permissions modification notification for 'chmod'
+- Renamed auditd::add_rules to auditd::rule
 
 * Mon Dec 26 2016 Ralph Wright <rwright@onyxpoint.com> - 7.0.0-0
 * Mon Dec 26 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 7.0.0-0
